--- a/page4.html
+++ b/page4.html
@@ -128,7 +128,7 @@ video,canvas,.fx,.overlay{pointer-events:none;z-index:0;}
     const questions = [
       {
         lead: '你走進熱鬧的廣場，一位穿著五彩繽紛衣服的女孩朝你揮手。',
-        q: '「如果你的手也能穿衣服，你覺得它會穿什麼樣的衣服呢？」',
+        q: '「如果你的手也能穿衣服，你覺得它會穿什麼衣服呢？」',
         opts: [
           {t:'輕便的露營裝，帶著實用的小口袋和背包，準備去探險。',k:'extravert'},
           {t:'柔軟溫暖的毛衣，像雲朵一樣包裹手指。',k:'introvert'},
