--- a/booth-duo-ipad.html
+++ b/booth-duo-ipad.html
@@ -78,6 +78,8 @@
   </div>
 
   <script>
+    // 是否把角色也存進照片（false=只存相機畫面）
+    const SAVE_OVERLAY_CHARACTER = false;
     const video   = document.getElementById('video');
     const canvas  = document.getElementById('canvas');
     const charImg = document.getElementById('char');
@@ -163,16 +165,17 @@
       // 先畫相機（鏡像，與預覽一致）
       drawMirrored(ctx, video, 0, sy, sw, sh, 0, 0, targetW, targetH);
 
-      // === 把角色畫到「左半邊」（contain 對齊） ===
-      const leftRect = { x:0, y:0, w: canvas.width*0.5, h: canvas.height };
-      const imgW = charImg.naturalWidth  || 1000;
-      const imgH = charImg.naturalHeight || 1000;
-      const s = Math.min(leftRect.w/imgW, leftRect.h/imgH);
-      const dw = imgW*s, dh = imgH*s;
-      const dx = leftRect.x + (leftRect.w - dw)/2;
-      const dy = leftRect.y + (leftRect.h - dh)/2;
-
-      drawMirrored(ctx, charImg, 0, 0, imgW, imgH, dx, dy, dw, dh);
+      // === 如需把角色也存進照片，才會把左半邊角色疊進去 ===
+      if (SAVE_OVERLAY_CHARACTER) {
+        const leftRect = { x:0, y:0, w: canvas.width*0.5, h: canvas.height };
+        const imgW = charImg.naturalWidth  || 1000;
+        const imgH = charImg.naturalHeight || 1000;
+        const s = Math.min(leftRect.w/imgW, leftRect.h/imgH);
+        const dw = imgW*s, dh = imgH*s;
+        const dx = leftRect.x + (leftRect.w - dw)/2;
+        const dy = leftRect.y + (leftRect.h - dh)/2;
+        drawMirrored(ctx, charImg, 0, 0, imgW, imgH, dx, dy, dw, dh);
+      }
 
       flash.classList.add('show');
       setTimeout(()=>flash.classList.remove('show'), 140);
